# OpenSmokeDetection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_en.md  aarch64-himix100-linux.cmake
model/: model-0.05373.yaml
src/core/: cv_dtree.cpp  cv_dtree_header.hpp  detector.cpp  detector.hpp  features.cpp  features.hpp  main.cpp  main.hpp  model.cpp  model.hpp  statistical_features.cpp  statistical_features.hpp
src/util/: cutImage.py  data.txt  dataProcess.py  dataset.txt  printProcess.hpp  test.txt  writeAnnotation.py
